@@ -6,6 +6,7 @@ version <next>:
 - VVC VAAPI decoder
 - RealVideo 6.0 decoder
 - OpenMAX encoders deprecated
+- libx265 alpha layer encoding
 
 version 7.1:
 - Raw Captions with Time (RCWT) closed caption demuxer
